--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -359,7 +359,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 /* bottom-btn */
 .bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:inherit;z-index:calc(var(--header-zIndex) - 1);}
 .bottom-btn-title {padding:24px 24px 8px 24px;background-color:var(--white-100);border-radius:20px 20px 0 0;box-shadow: 0px -2px 40px -1px var(--shadow-gray_3);}
-.content .bottom-btn {width:auto;margin:24px -16px -24px;}
+.content .bottom-btn {width:auto;margin:auto -16px -24px;padding-top:24px;}
 .content .bottom-btn .btn-wrap {padding:12px 16px;}
 .content .bottom-btn .btn-wrap.btn-nowrap {padding:8px 16px;}
 
@@ -639,3 +639,4 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 
 .banner {display:block;}
 .banner img {width:100%;}
+
