--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -645,10 +645,11 @@ input[type="checkbox"].type-blue:checked {background:url(/resources/images/form/
 .form-valid .validate-text {color:var(--status-success);}
 .form + .form {margin-top:8px;}
 
-.form-exchange {position:relative;display:flex;justify-content:space-between;border-radius:16px;background:var(--surface-surface);padding:24px;gap:8px;}
+.form-exchange {position:relative;display:flex;justify-content:space-between;border-radius:16px;background:var(--surface-surface);padding:24px;gap:8px;z-index:1;}
 .form-exchange .label {font-size:22px;font-weight:700;color:var(--typography-title);gap:3px;margin-bottom:0;}
 .form-exchange .ex-input-wrap {flex:1}
 .form-exchange .ex-input-wrap input {height:36px;text-align:right;font-size:24px;font-weight:700;color:var(--typography-title);}
+.form-exchange .ex-input-wrap input:not([readonly],[disabled]):focus-within + span:after {content:'';position:absolute;left:0;top:0;width:100%;height:100%;outline:2px solid var(--status-focused);border-radius:16px;z-index:-1;outline-offset:-2px;}
 .form-exchange .ex-input-wrap span {display:block;font-size:16px;line-height:1;font-weight:500;color:var(--typography-caption);margin-top:8px;text-align:right;}
 .form-exchange .sum {position:absolute;left:50%;top:-32px;margin-left:-12px;width:24px;height:24px;background:url(/resources/images/common/arrow_sum.svg) center center / contain no-repeat;}
 .ex-input-wrap .anchor-fluid {width:auto;padding:0;margin-left:auto;font-size:20px;font-weight:700;color:var(--typography-black);}
