--- a/html/components/component_list.html
+++ b/html/components/component_list.html
@@ -200,7 +200,7 @@
 									<source srcset="/resources/images/PBWMA/ico-fig-list01.svg">
 									<img src="/resources/images/PBWMA/ico-fig-list01.svg" alt="">
 								</picture>
-								<figcaption>수익률 Best</figcaption>
+								<figcaption>수익률 BEST</figcaption>
 							</figure>
 						</li>
 						<li>
@@ -209,7 +209,7 @@
 									<source srcset="/resources/images/PBWMA/ico-fig-list02.svg">
 									<img src="/resources/images/PBWMA/ico-fig-list02.svg" alt="">
 								</picture>
-								<figcaption>판매 Best</figcaption>
+								<figcaption>판매 BEST</figcaption>
 							</figure>
 						</li>
 						<li>
