--- a/html/components/component_toast.html
+++ b/html/components/component_toast.html
@@ -85,16 +85,40 @@
 			});
 		});
 		$('#success').click(function(event) {
-			toastr.success(``, '등록되었습니다.');
+			toastr.success(``, '등록되었습니다.', {
+				"timeOut": 0,
+				"extendedTimeOut": 0,
+				"preventDuplicates": false,
+				"disableTimeOut": true,
+
+			});
 		});
 		$('#info').click(function(event) {
-			toastr.info('', 'You clicked Info toast')
+			toastr.info('', 'You clicked Info toast', {
+				"timeOut": 0,
+				"extendedTimeOut": 0,
+				"preventDuplicates": false,
+				"disableTimeOut": true,
+
+			});
 		});
 		$('#caution').click(function(event) {
-			toastr.caution('', '삭제되었습니다.')
+			toastr.caution('', '삭제되었습니다.', {
+				"timeOut": 0,
+				"extendedTimeOut": 0,
+				"preventDuplicates": false,
+				"disableTimeOut": true,
+
+			});
 		});
 		$('#error').click(function(event) {
-			toastr.error('', '더 이상 등록할 수 없습니다.')
+			toastr.error('', '더 이상 등록할 수 없습니다.', {
+				"timeOut": 0,
+				"extendedTimeOut": 0,
+				"preventDuplicates": false,
+				"disableTimeOut": true,
+
+			});
 		});
 	</script>
 </body>
