--- a/html/layout/layout-header_search.html
+++ b/html/layout/layout-header_search.html
@@ -295,8 +295,8 @@
 							<div class="gnb-menu-section" id="gnb-list03">
 								<strong>펀드</strong>
 								<ul>
-									<li><a href="#">수익률 Best</a></li>
-									<li><a href="#">판매 Best</a></li>
+									<li><a href="#">수익률 BEST</a></li>
+									<li><a href="#">판매 BEST</a></li>
 									<li><a href="#">이달의 추천 펀드</a></li>
 									<li><a href="#">펀드 찾기</a></li>
 									<li><a href="#">나의 관심 펀드</a></li>
