--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -358,7 +358,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 
 /* bottom-btn */
 .bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:inherit;z-index:calc(var(--header-zIndex) - 1);}
-.bottom-btn-title {padding:24px 24px 8px 24px;background-color:var(--white-100);border-radius:20px 20px 0 0;box-shadow: 0px -2px 40px -1px var(--shadow-gray_3);}
+.bottom-btn-title {padding:24px 24px 8px 24px;background-color:var(--white-100);border-radius:20px 20px 0 0;box-shadow:0px -2px 40px -1px var(--shadow-gray_3);}
 .content .bottom-btn {width:auto;margin:auto -16px -24px;padding-top:24px;}
 .content .bottom-btn .btn-wrap {padding:12px 16px;}
 .content .bottom-btn .btn-wrap.btn-nowrap {padding:8px 16px;}
@@ -511,7 +511,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .box {padding:60px 24px;}
 
 /* loader-wrap */
-.loader-wrap {position:fixed;left:0;top:0;width:100%;height:100%;z-index:var(--loader-zIndex);display:flex;align-items:center;justify-content:center;overflow:hidden;background-color:var(--surface-surface);}
+.loader-wrap {position:fixed;left:0;top:0;width:100%;height:100%;z-index:var(--loader-zIndex);display:flex;align-items:center;justify-content:center;overflow:hidden;}
 
 /* chart-wrap */
 .chart-wrap {background-color:var(--background-bg_lightGray);border-radius:8px;}
@@ -524,7 +524,6 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .visual-headline span {display:block;font-size:18px;color:var(--typography-title);line-height:1.5;padding:0 2px;}
 .visual-headline span b {font-weight:700;}
 .visual-headline strong {display:block;font-size:30px;font-weight:700;color:var(--typography-title);line-height:1.5;margin-top:10px;}
-
 .main-section-title {display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;}
 .main-schedule-section {padding:24px 0 48px;}
 
@@ -534,11 +533,13 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 
 .main-schedule-week {margin:8px 0 24px;}
 .main-schedule-week ul {display:flex;gap:6px;justify-content:space-between;padding:6px;}
-.main-schedule-week ul li {position:relative;flex:0 0 40px;width:40px;height:40px;border-radius:8px;display:flex;align-items:center;justify-content:center;color:var(--typography-black);}
-.main-schedule-week .date {font-size:16px;}
+.main-schedule-week ul li {position:relative;flex:0 0 40px;width:40px;height:40px;border-radius:8px;display:flex;align-items:center;justify-content:center;color:var(--typography-black);border:2px solid transparent;}
+.main-schedule-week .date {font-size:16px;width:100%;height:100%;display:flex;align-items:center;justify-content:center;}
 .main-schedule-week .is-schedule {background-color:var(--surface-surface50);}
 .main-schedule-week .today,
-.main-schedule-week .is-schedule.today {background-color:var(--brandPrimary-blue600);}
+.main-schedule-week .is-schedule.today {border-color:var(--blue-200);color:var(--brandPrimary-blue600);}
+.main-schedule-week .is-active {background-color:var(--brandPrimary-blue600);color:var(--typography-white);}
+.main-schedule-week .is-schedule.today.is-active {color:var(--typography-white);}
 .main-schedule-week .weekend:first-child:not(.today) {color:var(--red-400);}
 .main-schedule-week .weekend:last-child:not(.today) {color:var(--blue-400);}
 .main-schedule-week li.today {color:var(--typography-white);}
