--- a/html/layout/loader.html
+++ b/html/layout/loader.html
@@ -102,7 +102,7 @@
 					</style>
 
 					<!-- tab-content -->
-					<div class="tab-content tab-fluid">
+					<div class="tab-content tab-fluid tab-sticky">
 						<ul class="tab-list tab-col overflow-list px24" role="tablist">
 							<li class="tab tab-active"><a role="tab" href="#">주요지수</a></li>
 							<li class="tab"><a role="tab" href="#">주가지수</a></li>
