--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -243,6 +243,20 @@
 						</div>
 					</dd>
 				</dl>
+				<dl>
+					<dt>inner select</dt>
+					<dd>
+						<div class="form">
+							<div class="label"></div>
+							<div class="input-wrap input-placeholder input-select">
+								<button class="select" data-micromodal-trigger="modal-select-list" data-placeholder="선택하세요"><span>선택</span></button>
+								<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액">
+								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+							</div>
+						</div>
+					</dd>
+				</dl>
 			</div>
 		</div>
 
@@ -304,6 +318,33 @@
 
 
 	</div>
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-select modal" id="modal-select-list">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="modal__header modal__header__alert">
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close=""></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content content-fluid">
+						<div class="select-option">
+							<ul>
+								<li><button type="button" data-micromodal-close onclick="console.log(1)"><span>키워드</span></button></li>
+								<li class="select-active"><button type="button" aria-label="선택됨" data-micromodal-close onclick="console.log(1)"><span>펀드명</span></button></li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
 </body>
 
 </html>
